Notifications are funcitonal, labels are now visible by tasks and users, and pomodoro bug fixxed.

--- a/plantask/plantask/static/styles/base.css
+++ b/plantask/plantask/static/styles/base.css
@@ -135,6 +135,41 @@
     border-radius: 0.25rem;
 }
 
+.label-kanban{
+    font-family: "Proxima Nova" sans-serif;
+    font-weight: 600;
+    max-height: 1.5rem;
+    border-radius: 0.5rem;
+    color: white;
+    white-space: nowrap;
+    overflow: hidden;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    text-overflow: ellipsis;
+    min-width: 0;
+    max-width: 100%;
+}
+.label-list-kanban {
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    gap: 0.2rem;
+    overflow-x: auto;
+    padding-bottom: 0.25rem;
+    width: 100%; 
+    max-width: 100%;  
+    scrollbar-width: thin;
+    margin-right: 2.5rem;
+}
+.label-list::-webkit-scrollbar {
+    height: 0.5rem;
+}
+.label-list::-webkit-scrollbar-thumb {
+    background: #ccc;
+    border-radius: 0.25rem;
+}
+
+
 #pomodoro-wrapper {
   position: fixed;
   bottom: 0;
