--- a/plantask/plantask/static/styles/pomodoro.css
+++ b/plantask/plantask/static/styles/pomodoro.css
@@ -52,7 +52,7 @@
 
 #pomodoro-progress-bar {
   height: 100%;
-  background: #bbb6ff;
+  background: rgb(206, 127, 36);
   width: 0%;
   transition: width 0.4s ease;
 }
@@ -63,7 +63,6 @@
   height: 100%;
   background: rgba(255, 99, 132, 0.75); /* o el color que quieras para los bloques de descanso */
   opacity: 1;
-  border-radius: 2px;
   pointer-events: none;
 }
 
